[tool.poetry]
name = "dap-22"
version = "0.1.0"
description = ""
authors = ["Adam Hrin <adam.hrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
